<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:foregroundGravity="center_horizontal"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/vaccineName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vaccineTitle"
                android:text="@string/vaccine_name"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/numberDose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vaccineName"
                android:text="@string/dose_number"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/receivedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/numberDose"
                android:textSize="24sp"
                android:text="@string/received_date" />

            <TextView
                android:id="@+id/vaccinationHospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/receivedDate"
                android:textSize="24sp"
                android:text="@string/hospital" />

            <TextView
                android:id="@+id/vaccineTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="#FFC107"
                android:text="@string/covid_19_vaccine"
                android:textAlignment="center"
                android:textSize="34sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>